--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -337,9 +337,25 @@ dictionary:
     infoOutputDetail:   Informacion detallada Salida Bodega  
     idOutput:           ID Salida
     
-    ##---------------------- DETALLE SALIDA----------------------------## 
-     
-    ##---------------------- ERRORES----------------------------##
+    ##---------------------- DETALLE SALIDA----------------------------##
+    
+    ##---------------------- MIELES----------------------------## 
+    honeys:             Mieles
+    honeysInformation:  Información de Mieles
+    turn:               Turno
+    operator:           Operario
+    numberOfFattening:  Numero de ceba
+    box:                Caja
+    observations:       Observaciones
+    editHoneys:         Editar Mieles
+    newHoneys:          Nuevas Mieles
+    Enter your turn:    Ingrese su turno
+    Enter your numCeba: Ingresa el numero de Ceba
+    Enter your number box: Ingrese el numero de caja
+    Enter your observation: Ingrese su Observacion
+    ##---------------------- MIELES----------------------------## 
+   
+   ##---------------------- ERRORES----------------------------##
     errorLengthEmployee:    Error Su Nombre (%nombre%) Excede La Cantidad Maxima de Caracteres (%caracteres%).
     errorLengthLastEmployee: Error Su Apellido (%apellido%) Excede La Cantidad Maxima de Caracteres (%caracteres%).
     errorLengthPhone:       Error Su Telefono (%telefono%) Excede La Cantidad Maxima de Caracteres (%caracteres%).
