Correcciones en tablas: -controlCalidad -empaque -empleado -ingresoCaña -insumo -panela Correccion Idiomas en menu

--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -42,6 +42,7 @@ dictionary:
     dateEnd:              Date Ending.
     page:                 Page
     of:                   of
+    languages:            languages
     ##----------------------SISTEMA-------------------------##
     
     ##----------------------USUARIO-------------------------##
