--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -364,11 +364,11 @@ dictionary:
     sediment:              Sedimento
     hour:                  hora
     ##----------------------panela-------------------------##
-    ##----------------------Clarificacion------------------##
-    infoClarification:     Informacion de Clarificacion
-    newClarification:      Nueva Clarificacion
-    editClarification:     Editar Clarificacion
-    clarification:         Clarificacion
+    ##----------------------Clarificación------------------##
+    infoClarification:     Informacion de Clarificación
+    newClarification:      Nueva Clarificación
+    editClarification:     Editar Clarificación
+    clarification:         Clarificación
     batchNumber:           Numero de Bache
     phDiluted:             Ph Diluido
     phClarified:           Ph Clarificado
@@ -379,7 +379,7 @@ dictionary:
     Enter your Number Ph:  Ingrese su Ph
     Enter your Number Cal: Ingrese su  Cal
     Enter your Number flocculant: Ingrese la Cantidad de Flocculant
-    ##----------------------Clarificacion------------------##
+    ##----------------------Clarificación------------------##
     ##---------------------- ERRORES----------------------------##
     errorLengthEmployee:    Error Su Nombre (%nombre%) Excede La Cantidad Maxima de Caracteres (%caracteres%).
     errorLengthLastEmployee: Error Su Apellido (%apellido%) Excede La Cantidad Maxima de Caracteres (%caracteres%).
