correcciones en formularios

--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -334,7 +334,7 @@ dictionary:
     Enter your observation: Enter your Observation
     ##---------------------- MIELES----------------------------##
     ##----------------------panela-------------------------##
-    panela:                panela
+    panela:                Panela
     newPanela:             New Panela
     editPanela:            Edit Panela
     infoPanela:            Information Panela
